// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormTextInput component renders as expected 1`] = `
<TextInput
  multiline={false}
  numberOfLines={1}
  onChangeText={[Function]}
  onSubmitEditing={[Function]}
  placeholder="placeholder"
  style={
    Array [
      Object {
        "fontFamily": "Avenir",
        "fontSize": 14,
        "width": "100%",
      },
      false,
      undefined,
    ]
  }
  testID=""
  value=""
/>
`;

exports[`FormTextInput component renders as expected with defined style 1`] = `
<TextInput
  multiline={false}
  numberOfLines={1}
  onChangeText={[Function]}
  onSubmitEditing={[Function]}
  placeholder="placeholder"
  style={
    Array [
      Object {
        "fontFamily": "Avenir",
        "fontSize": 14,
        "width": "100%",
      },
      false,
      Object {
        "margin": 10,
      },
    ]
  }
  testID=""
  value=""
/>
`;
